k8s/temp/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
  labels:
    app: kafka
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        # Sử dụng image chính thức của Apache Kafka (hỗ trợ KRaft)
        image: apache/kafka:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9092
          name: client
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: client
      protocol: TCP
      port: 9092
      targetPort: 9092
  type: ClusterIP
