k8s/temp/ollama.yaml
# 3. Deployment chứa 3 containers (Ollama, Nginx Proxy, và Auto-puller)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-deployment
  labels:
    app: ollama
spec:
  replicas: 1 # Khuyến cáo để 1 vì model tốn nhiều RAM/GPU
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      volumes:
      - name: ollama-data
        persistentVolumeClaim:
          claimName: ollama-pvc
      - name: nginx-template
        configMap:
          name: ollama-nginx-template
      containers:



      # Container 1: Ollama
      - name: ollama
        image: ollama/ollama:latest
        ports:
        - containerPort: 11434
        volumeMounts:
        - name: ollama-data
          mountPath: /root/.ollama
        # Báo cho K8s biết Ollama đã sống
        readinessProbe:
          httpGet:
            path: /
            port: 11434
          initialDelaySeconds: 10
          periodSeconds: 5

      # Container 2: Nginx Proxy
      - name: nginx-proxy
        image: nginx:alpine



        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-template
          mountPath: /etc/nginx/templates # <--- CHỈ ĐỂ THƯ MỤC NÀY


















        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5


      # # Container 3: Auto Puller (Đợi Ollama lên rồi tự kéo model)
      # - name: auto-puller
      #   image: curlimages/curl:latest
      #   command: ["sh", "-c"]
      #   args:
      #     - |
      #       echo "Đang chờ Ollama sẵn sàng..."
      #       while ! curl -s http://127.0.0.1:11434/api/tags > /dev/null; do sleep 5; done
      #       echo "Bắt đầu gọi API tải model gemma2:9b..."
      #       curl -X POST http://127.0.0.1:11434/api/pull -d '{"name": "gemma2:9b"}'
      #       echo "Hoàn tất tải model!"
      #       sleep infinity # Giữ container sống để k8s không báo lỗi CrashLoop
---
# 4. Service trỏ vào port 80 của Nginx (Không trỏ vào 11434 của Ollama)
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
spec:
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
