k8s/temp/redis-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-payment-deployment
  labels:
    app: redis-payment
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: redis-payment
  template:
    metadata:
      labels:
        app: redis-payment
    spec:
      containers:
      - name: redis-payment
        image: redis:7.4-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
          name: redis
        command: ["redis-server", "--requirepass", "secret123", "--appendonly", "yes"]
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "64Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-payment
spec:
  selector:
    app: redis-payment
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
